added room_observations to client import fro travelers to clients observatiosn update excel
